5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3986/executions/1573_2897.log
== TEST (2019-03-13 15:16:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o nome:")))

# Impressao do dobro do numero
print()
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:17:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o nome:")))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:17:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o nome:")))

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.202086
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
24
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:17:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input(8)))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
824
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:17:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input(8)))

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.15176
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
824
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
824
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:17:29) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o numero")))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:17:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o numero")))

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.226725
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
24
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:17:38) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o numero: 16")))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:17:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o numero: 16")))

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.152473
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
24
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:18:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o numero:")))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:18:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o numero:")))

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.253157
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
24
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:18:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o numero:")))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:18:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o numero:8")))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:18:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o numero: ")))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:18:40) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o numero: ")))

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.139347
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
24
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:18:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o numero: ")))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:18:59) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int((input("digite o numero:8
					  ")))

# Impressao do dobro do numero
print(24)
-- ERROR:
File "XXXX", line 4
    num = int((input("digite o numero:8
                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:19:24) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:")))

# Impressao do dobro do numero
print(24)
-- ERROR:
File "XXXX", line 4
    num = int(input()))
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:19:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:")))

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.161845
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input()))
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:19:35) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:"))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:19:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:"))

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.167559
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
24
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:19:37) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:"))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:19:49) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(8))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
824
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:19:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(8))

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.192326
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
824
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
824
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:19:50) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(8))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
824
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:20:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(8))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
824
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:20:10) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(digite o numero:8))

# Impressao do dobro do numero
print(24)
-- ERROR:
File "XXXX", line 4
    num = int(input(digite o numero:8))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:20:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(digite o numero:8))

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.203507
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input(digite o numero:8))
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:20:12) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(digite o numero:8))

# Impressao do dobro do numero
print(24)
-- ERROR:
File "XXXX", line 4
    num = int(input(digite o numero:8))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:20:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(digite o numero:8))

# Impressao do dobro do numero
print(24)
-- ERROR:
File "XXXX", line 4
    num = int(input(digite o numero:8))
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:28:58) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input.digite o numero:)

# Impressao do dobro do numero
print(24)
-- ERROR:
File "XXXX", line 4
    num = int(input.digite o numero:)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input.digite o numero:)

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.146938
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input.digite o numero:)
                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:29:13) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- ERROR:
File "XXXX", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:15) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.151888
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.207007
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.151911
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.113595
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.125093
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.114749
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.110692
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:17) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.09937
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1573/2897/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.16988
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.13938
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.104086
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1573/2897/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.104424
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.095427
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.101258
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.107481
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.107334
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.107586
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.118212
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.0968409
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.0972409
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.109328
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.107039
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.112108
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:21) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.0924551
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1573/2897/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input)"digite o numero:"

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.102786
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    num = int(input)"digite o numero:"
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:29:47) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:"))

# Impressao do dobro do numero
print(24)
-- OUTPUT:
24
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:29:48) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:"))

# Impressao do dobro do numero
print(24)
-- EXECUTION TIME:
0.188681
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
24
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
24
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:30:02) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- OUTPUT:
2468
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:30:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME:
0.188453
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
